[package]
name = "esp-rs"
version = "0.1.0"
authors = ["vortex314 <lieven.merckx@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp32-hal= {version="0.16.0",default-features=false,features=["xtal-40mhz","rt","vectored","eh1","embassy-executor-thread","embassy-time-timg0"]}
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32","log"] }
log = { version = "0.4.18" }
embassy-sync = { version = "0.3.0", default-features = false, features = [] }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.1.1", features = ["esp32", "wifi"] }
# smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
# embedded-svc = { version = "0.26.4", default-features = false, features = [] }
embedded-io = "0.4.0"
# heapless = { version = "0.8.0", default-features = false }
embassy-futures="*"
# embassy-sync="*"
embassy-time="0.1.5"
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
embedded-hal="*"
embassy-executor={ version = "0.3.3", default-features = false, features = ["executor-thread","integrated-timers","nightly"] }
critical-section="*"
static_cell = {version = "*", default-features = false, features = ["nightly"] } 

[features]
default=["embassy"]
embassy=[]
tokio=[]
alloc_error_handler = []
